Added challenge page.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tpm-malcrypt by theopolis</title>
+    <title>tpm-malcrypt by theopolis</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tpm-malcrypt</h1>
+        <h1>tpm-malcrypt</h1>
         <p>An example malicious payload controller and obfuscator assisted by TPM-protected keys</p>
 
         <p class="view"><a href="https://github.com/theopolis/tpm-malcrypt">View the Project on GitHub <small>theopolis/tpm-malcrypt</small></a></p>
